Bug 417192 - Discover shows version of some addons from KDE Store as "%'(i18n_argument_missing)"
Summary: Discover shows version of some addons from KDE Store as "%'(i18n_argument_mis...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: 5.18.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-05 12:18 UTC by Patrick Silva
Modified: 2020-10-01 22:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
screenshot (61.06 KB, image/png)
2020-02-05 12:18 UTC, Patrick Silva
Details
not all addons are affected (63.24 KB, image/png)
2020-02-21 18:11 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-05 12:18:03 UTC
Created attachment 125697 [details]
screenshot

See the attached screenshot of Discover 5.18 beta taken on Arch Linux.

EXPECTED RESULT
Discover should show the correct version of addons from KDE Store.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Comment 1 Nate Graham 2020-02-05 19:42:01 UTC
Weird. I haven't seen this myself.
Comment 2 Patrick Silva 2020-02-21 18:11:34 UTC
Created attachment 126268 [details]
not all addons are affected

Operating System: Arch Linux 
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 3 Nate Graham 2020-02-22 16:33:33 UTC
Looks like there are a few bugs here:
- Some KNS items don't have version numbers, or their version numbers aren't getting passed to discover properly
- Discover assumes the presence of a version number, leading to these i18n() errors.
Comment 4 Andres 2020-04-13 05:59:10 UTC
This also happens rto me except discover crashes afterwards

https://bugs.kde.org/show_bug.cgi?id=419648
Comment 5 Patrick Silva 2020-05-09 14:56:13 UTC
I have noticed something: Discover doesn't find updates available for plasma addons unless I open their respective "Get new <thing>" windows in system settings before.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 6 Aleix Pol 2020-05-22 16:08:05 UTC
@Patrick, can you please open a separate issue on the updates not being fetched?
Comment 7 Patrick Silva 2020-05-22 17:02:45 UTC
done: bug 421924
Comment 8 Aleix Pol 2020-07-30 23:10:46 UTC
Git commit d95fd3a2d4adcac9e695664e540ff892a2f3f47f by Aleix Pol.
Committed on 30/07/2020 at 23:10.
Pushed by apol into branch 'master'.

kns: provide the release date if the resource isn't providing a version

M  +3    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/commit/d95fd3a2d4adcac9e695664e540ff892a2f3f47f
Comment 9 Aleix Pol 2020-10-01 20:56:54 UTC
Git commit 1942de8749c46044815c6d9a964f161c7beb18cb by Aleix Pol.
Committed on 01/10/2020 at 15:53.
Pushed by apol into branch 'master'.

kns: show the release date if the version isn't available

M  +2    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/commit/1942de8749c46044815c6d9a964f161c7beb18cb