kns: provide the release date if the resource isn't providing a version

BUG: 417192