libdiscover/backends/KNSBackend/KNSResource.cpp
@@ -159,7 +159,9 @@ QString KNSResource::installedVersion() const
 
 QString KNSResource::availableVersion() const
 {
-    return !m_entry.updateVersion().isEmpty() ? m_entry.updateVersion() : m_entry.version();
+    return !m_entry.updateVersion().isEmpty() ? m_entry.updateVersion()
+         : !m_entry.version().isEmpty() ? m_entry.version()
+         : releaseDate().toString();
 }
 
 QString KNSResource::origin() const
